--- a/UsingOssTestFramework/Podfile
+++ b/UsingOssTestFramework/Podfile
@@ -5,7 +5,8 @@ target 'UsingOssTestFramework' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for UsingOssTestFramework
+  pod 'Quick'
+  pod 'Nimble'
 
   target 'UsingOssTestFrameworkTests' do
     inherit! :search_paths
@@ -15,5 +16,5 @@ target 'UsingOssTestFramework' do
   target 'UsingOssTestFrameworkUITests' do
     # Pods for testing
   end
-
+  
 end
